@@ -1,7 +1,8 @@
 package com.codewithproject.springsecurity.services.impl;
 
-import com.codewithproject.springsecurity.dto.entitydto.LineDto;
+import com.codewithproject.springsecurity.dto.entitydto.LineProgressDto;
 import com.codewithproject.springsecurity.dto.request.InsertLineRequest;
+import com.codewithproject.springsecurity.dto.response.LineListResponse;
 import com.codewithproject.springsecurity.entities.Line;
 import com.codewithproject.springsecurity.entities.LineProgress;
 import com.codewithproject.springsecurity.entities.LineProgressCompositeKey;
@@ -12,10 +13,18 @@ import com.codewithproject.springsecurity.seeder.LineSeeder;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
-import static com.codewithproject.springsecurity.config.MessageConstants.*;
+import static com.codewithproject.springsecurity.config.MessageConstants.MAP_MESSAGE;
+import static com.codewithproject.springsecurity.config.MessageConstants.MAP_STATUS_CODE;
+import static com.codewithproject.springsecurity.config.MessageConstants.MESS_EMAIL_NOT_FOUND;
+import static com.codewithproject.springsecurity.config.MessageConstants.MESS_SAVE_FAILED;
+import static com.codewithproject.springsecurity.config.MessageConstants.MESS_SAVE_SUCCESS;
 
 @Service
 public class LineServiceImpl {
@@ -42,19 +51,49 @@ public class LineServiceImpl {
         return result;
     }
 
-    public List<LineDto> getListLine() {
-        List<LineDto> result = new ArrayList<>();
-        List<Line> listLine = lineRepo.getListLine();
+    public List<LineListResponse> getListLine() {
+        List<LineListResponse> response = new ArrayList<>();
+        List<Line> listLine = lineRepo.getLineHaveProgress();
         if (!listLine.isEmpty()) {
-            result = listLine.stream().map(b -> {
-                LineDto dto = new LineDto();
-                dto.setId(b.getId());
-                dto.setBladeUnitID(b.getBladeUnitID());
-                dto.setPeriod(b.getPeriod());
-                return dto;
-            }).collect(Collectors.toList());
+            // get line id
+            List<String> listLineID = listLine.stream().distinct().map(Line::getId).toList();
+            List<LineProgress> listLinePro = lineProgressRepo.getLineProgressByID(listLineID);
+            if (!listLinePro.isEmpty()) {
+
+                List<LineProgressDto> lpDto = listLinePro.stream().map(p -> {
+                    LineProgressDto dto = new LineProgressDto();
+                    dto.setLineID(p.getId().getLineID());
+                    dto.setUserEmail(p.getId().getUserEmail());
+                    dto.setDepositStatus(p.getDepositStatus());
+                    return dto;
+                }).toList();
+
+                response = listLine.stream().map(b -> {
+                    LineListResponse dto = new LineListResponse();
+                    dto.setId(b.getId());
+                    dto.setBladeUnitID(b.getBladeUnitID());
+                    dto.setPeriodCnt(b.getPeriodCnt());
+                    dto.setPeriod(b.getPeriod());
+                    dto.setInitPrice(b.getInitPrice());
+                    dto.setDeposit(b.getDeposit());
+                    dto.setDepreciation(b.getDepreciation());
+                    dto.setFee(b.getFee());
+                    dto.setEndPrice(b.getEndPrice());
+                    dto.setListProgress(lpDto.stream().filter(p -> p.getLineID().equals(dto.getId())).toList());
+                    return dto;
+                }).collect(Collectors.toList());
+            }
         }
-        return result;
+        return response;
+    }
+
+    private List<LineProgress> check(String id, List<LineProgress> listLinePro) {
+        List<LineProgress> lineProgress = new ArrayList<>();
+        LineProgress lineP = new LineProgress();
+        LineProgressCompositeKey linePCompositeKey = new LineProgressCompositeKey();
+        linePCompositeKey.setLineID(id);
+
+        return lineProgress;
     }
 
     public void insertLine(InsertLineRequest req) {
@@ -74,15 +113,15 @@ public class LineServiceImpl {
     public Map<String, Object> registerToLine(InsertLineRequest req) {
         Map<String, Object> result = new HashMap<>();
 
-        String userEmail = req.getUserEmail();
+        String email = req.getEmail();
         String token = req.getToken();
-        if (token.isEmpty() || userEmail.isEmpty()) {
+        if (token.isEmpty() || email.isEmpty()) {
             result.put(MAP_STATUS_CODE, 404);
             result.put(MAP_MESSAGE, MESS_EMAIL_NOT_FOUND);
             return result;
         }
         // Check user exist
-        Optional<User> user = userService.getUserDetail(req.getUserEmail());
+        Optional<User> user = userService.getUserDetail(req.getEmail());
 
         // Check line exist
         if (user.isPresent()) {
